--- a/dtt-api/pom.xml
+++ b/dtt-api/pom.xml
@@ -12,9 +12,18 @@
     <artifactId>dtt-api</artifactId>
     <dependencies>
         <dependency>
-            <groupId>com.baomidou</groupId>
-            <artifactId>mybatis-plus-annotation</artifactId>
-           <optional>true</optional>
+            <groupId>io.swagger</groupId>
+            <artifactId>swagger-annotations</artifactId>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>cn.iceblue</groupId>
+            <artifactId>dtt-core</artifactId>
         </dependency>
     </dependencies>
 
