--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,7 @@
         <commons-lang3.version>3.17.0</commons-lang3.version>
         <hutool.version>5.8.37</hutool.version>
         <hibernate.validator.version>5.2.4.Final</hibernate.validator.version>
+        <swagger.version>1.6.16</swagger.version>
     </properties>
     <dependencies>
         <dependency>
@@ -134,6 +135,12 @@
                 <groupId>org.hibernate</groupId>
                 <artifactId>hibernate-validator</artifactId>
                 <version>${hibernate.validator.version}</version>
+            </dependency>
+            <!-- https://mvnrepository.com/artifact/io.swagger/swagger-annotations -->
+            <dependency>
+                <groupId>io.swagger</groupId>
+                <artifactId>swagger-annotations</artifactId>
+                <version>${swagger.version}</version>
             </dependency>
 
         </dependencies>
