提交代码-添加基础Mybatis代码

--- a/dtt-api/pom.xml
+++ b/dtt-api/pom.xml
@@ -25,6 +25,10 @@
             <groupId>cn.iceblue</groupId>
             <artifactId>dtt-core</artifactId>
         </dependency>
+        <dependency>
+            <groupId>cn.iceblue</groupId>
+            <artifactId>dtt-data</artifactId>
+        </dependency>
     </dependencies>
 
 
