--- a/dtt-web/pom.xml
+++ b/dtt-web/pom.xml
@@ -23,13 +23,19 @@
 
         <dependency>
             <groupId>cn.iceblue</groupId>
-            <artifactId>dtt-data</artifactId>
+            <artifactId>dtt-api</artifactId>
         </dependency>
 
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
             <optional>true</optional>
+        </dependency>
+
+        <!-- Sa-Token 权限认证，在线文档：https://sa-token.cc -->
+        <dependency>
+            <groupId>cn.dev33</groupId>
+            <artifactId>sa-token-spring-boot-starter</artifactId>
         </dependency>
 
     </dependencies>
