--- a/dtt-api/pom.xml
+++ b/dtt-api/pom.xml
@@ -29,6 +29,15 @@
             <groupId>cn.iceblue</groupId>
             <artifactId>dtt-data</artifactId>
         </dependency>
+        <!-- Sa-Token 权限认证，在线文档：https://sa-token.cc -->
+        <dependency>
+            <groupId>cn.dev33</groupId>
+            <artifactId>sa-token-spring-boot-starter</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-validator</artifactId>
+        </dependency>
     </dependencies>
 
 
