--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,7 @@
         <hibernate.validator.version>5.2.4.Final</hibernate.validator.version>
         <swagger.version>1.6.16</swagger.version>
         <satoken.starter.version>1.34.0</satoken.starter.version>
+        <jasypt.starter.version>3.0.5</jasypt.starter.version>
     </properties>
     <dependencies>
         <dependency>
@@ -148,6 +149,12 @@
                 <groupId>cn.dev33</groupId>
                 <artifactId>sa-token-spring-boot-starter</artifactId>
                 <version>${satoken.starter.version}</version>
+            </dependency>
+            <!-- jasypt 数据库链接等敏感信息加密 -->
+            <dependency>
+                <groupId>com.github.ulisesbocchio</groupId>
+                <artifactId>jasypt-spring-boot-starter</artifactId>
+                <version>${jasypt.starter.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
